envoy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          add_user_agent: true
          idle_timeout: 0.840s
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
                - "*"
              cors:
                allow_origin: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: shoppinglist_query_service
                  cors:
                      allow_origin: ["*"]
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,grpc-status,x-grpc-web,grpc-timeout,authorization
              - match:
                  prefix: "/"
                route:
                  cluster: shoppinglist_command_service
                  cors:
                      allow_origin: ["*"]
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,grpc-status,x-grpc-web,grpc-timeout,authorization
            response_headers_to_add:
              header:
                key: Access-Control-Expose-Headers
                value: Access-Control-Allow-Origin, Access-Control-Allow-Credentials, Content-Type, Pre-Response-Metadata, grpc-status, grpc-message
              append: false
          http_filters:
          - name: envoy.cors
          - name: envoy.grpc_web
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}
  clusters:
  - name: shoppinglist_query_service
    type: logical_dns
    lb_policy: round_robin
    connect_timeout: 0.50s
    http2_protocol_options: {}
    hosts:
        - socket_address:
            address: shoppinglist_query
            port_value: 1337
  - name: shoppinglist_command_service
    type: logical_dns
    lb_policy: round_robin
    connect_timeout: 0.50s
    http2_protocol_options: {}
    hosts:
        - socket_address:
            address: shoppinglist_command
            port_value: 1337
